
* SOLR-14928: Allow cluster state updates to be done in a distributed fashion without going through Overseer (Ilan Ginzburg)

* SOLR-15002: Upgrade httpclient to 4.5.13 and httpcore to 4.4.13 (Andras Salamon via janhoy)

* SOLR-15121: Move XSLT (tr param) response writer and update request handler to scripting contrib.  (Eric Pugh, David Smiley)

* SOLR-15292: SignatureUpdateProcessorFactory will fail to initialize if it is used in a SolrCloud cluster in a way that is
  known to be problematic with multiple replicas.  (hossman)

* SOLR-15258: Consolidate ConfigSet handling (C.R.U.D.) into ConfigSetService to allow for viable
  alternative implementations of where ConfigSets come from.
  (Nazerke Seidan, David Smiley)

Bug Fixes
---------------------
* SOLR-14546: Fix for a relatively hard to hit issue in OverseerTaskProcessor that could lead to out of order execution
  of Collection API tasks competing for a lock (Ilan Ginzburg).

* SOLR-15162: Allow readOnly parameter to be used with v2 modify collection command (Eric Pugh)

* SOLR-15233: Set doAs param in ConfigurableInternodeAuthHadoopPlugin (Geza Nagy, Jason Gerlowski, Mike Drob)

* SOLR-15317: Correctly handle user principals with whitespace in PKIAuthPlugin (Dominik Dresel, Mike Drob)

==================  8.9.0 ==================

Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release.

New Features
---------------------
* SOLR-14330: ExpandComponent now supports an expand.nullGroup=true option (hossman)

* SOLR-15150: New update.partial.requireInPlace=true option to prevent any partial document updates that can't be done In-Place (hossman)

* SOLR-15087: SolrCloud backups can now be restored to compatible existing collections, instead of requiring a new collection
  for each restore. (Jason Gerlowski, shalin, Cao Manh Dat)

* SOLR-15132: Add temporal graph query to the nodes Streaming Expression (Joel Bernstein)

Improvements
---------------------